Add margin to bottom of page

--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ html, body {
   width: 50%;
   margin: auto;
   margin-top: 20px;
+  margin-bottom: 50px;
 }
 
 #player-label {
@@ -52,7 +53,6 @@ html, body {
   margin: 10px;
   border: 2px solid black;
   text-align: center;
-  
 }
 
 #top-bar {
